--- a/02-02-2023/lista_libri/bio.html
+++ b/02-02-2023/lista_libri/bio.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Chi sono:</h1>
     <h2>Il mio nome è Valentina e sono una super appassionata della saga del piccolo maghetto nato dalla penna della
-        mitica J.K Rowling</h2>
+        mitica J.K. Rowling</h2>
     <button><a href="/">Torna alla Home</a></button>
 </body>
 
